...
            android:layout_height="match_parent"
            android:background="@color/bg_detail"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
...
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        tools:text="@string/desc_example"
        android:textSize="14sp"/>
...
