<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fav_detail"
        android:icon="@drawable/favorite_border"
        android:title="@string/menu_favorite"
        app:showAsAction="always"/>

</menu>